/*
 * $Id: ChangeLog,v 1.365 2002/08/31 14:04:51 ronpinkas Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2002-08-30 11:20 UTC-0300 Luiz Rafael Culik <culikr@uol.com.br>
  * source/rtl/tget.prg
    ! fix for DeleteAll() method when Variable is Date type Reported by Charles Kwon
  * utils/hbmake/hbmake.prg
    ! fix for path when generating /etc/harbour.cfg on linux
  % source/rtl/dbdelim.prg 
    ! Sync with the follow change on harbour
      2002-08-30 18:05 UTC-0400 David G. Holm <dholm@jsd-llc.com>
      * source/rtl/dbdelim.prg

2002-08-31 07:03 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/compiler/harbour.sly
    ! Fixed typo from last change.

2002-08-30 18:28 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/compiler/harbour.sly
    % Optimized WHILE .T. loops

  * source/vm/hvm.c
    % Minor optimization of HB_P_*ADDINT

  * tests/pp.prg
    * Minor correction to Auto Scrollong in DOT Mode.

2002-08-29 23:34 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * tests/pp.prg
    ! Fixed CompileNestedBlock() so that blocks withing literal arrays will not be missed.
    ! Fixed Keyboard History to not error when the buffer is full (and shift oldest command out).
    + Added auto scrolling within the DOT prompt.

  * tests/rp_dot.ch
    + Added rule for Clipper to fix bug with @ ... GET ...
    * Changed CLS to respect additional status line (1)

  /* Thanks vic@guerra.com.mx for his extensive input, and reporting of the problems leading to the above fixes.

2002-08-29 11:08 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * tests/pp.prg
    ! Fixed handling of command line defines.

  * tests/pptest.prg
    + Added #ifdef sample in demo script.

2002-08-28 14:28 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/vm/memvars.c
    ! Fixed hb_memvarSave to save date vars as date.
